# ai_tools

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ai_tools/: ai_covariance_node.py  ai_covariance_updater.py
ai_tools/models/: copy here your model.txt
dataset/: ai_log_20250412_174530.csv  ai_log_20250412_175658.csv  robot_localization.yaml  test_split_v7.csv
launch/: ai_covariance.launch.py
